# PythonSandbox

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  tox.ini
MacAddress/: MacAddressImp.py  __init__.py
ReST/: ReST.py
character/: character.py
character/abilities/: __init__.py  ability.py  scores.py
character/alignments/: __init__.py  alignment.py
character/backgrounds/: __init__.py  background.py
character/bonds/: __init__.py  bond.py
character/classes/: __init__.py  baseClass.py
character/flaws/: __init__.py  baseFlaw.py
character/ideals/: __init__.py  baseIdeal.py
character/items/: __init__.py  item.py
compressStr/: __init__.py  compress_string_in_memory.py
dbSetup/: __init__.py  db_connection.py  sqlalchemySetup.py  sqlite.py  tinyDbSetup.py
debugify/: Debugify.py  DebugifyDecorator.py  __init__.py
importFail/: importFail.py  protectedImports.py
integrationTesting/: integrationTesting.py
microWsgi/: app.js  app.py  db.py  uwsgiTestApp.py  websockets.py
nuitka/: README.rst  compileMe.py
observableDictionary/: observableDictionary.py
preCompliedWheels/: README  __init__.py  package.py  requirements.txt  setup.py
sanitiser/: sanitiser.py
store/: __init__.py  store.py
tests/: TestDebugify.py  __init__.py  test_MacAddress.py  test_ObservableDictionary.py  test_compress_string_in_memory.py  test_dbSetup.py  test_debugify.py  test_importFail.py  test_sanitiser.py  test_store.py
towerOfHanoi /: __init__.py
trying_trio/: trying_trio.py
webServer/: openapi.py  openapi.yml  service.py
(+8 files in other folders)
