[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
author = "Chris Brake"
author-email = "chris.brake@gmail.com"
description-file="README.md"
home-page="https://github.com/chrisbrake/PythonSandbox"
module = "debugify"
requires = [ "requests >=2.6", ]

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]

[tool.flit.scripts]
helloDebug = "debugify:hw"