[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
author = "Chris Brake"
author-email = "chris.brake@gmail.com"
description-file="README.md"
home-page="https://github.com/chrisbrake/PythonSandbox"
module = "debugify"
requires = [
    "aiohttp", "behave", "bottle", "cerberus", "connexion", "falcon", "gunicorn", "hypothesis", "mock",
    "nuitka", "pbr","requests", "responder", "six", "sqlalchemy", "tinydb", "trio", "uwsgi"
    ]

[tool.flit.metadata.requires-extra]
test = [ "flake8", "mock", "pytest", "pytest-cov", ]
doc = ["sphinx"]

[tool.flit.scripts]
helloDebug = "debugify:hw"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py3

[testenv]
deps = pytest
commands = pytest
"""